<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:paddingLeft="0dp"
              android:paddingRight="0dp"
              android:orientation="vertical">
              
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >
        
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:orientation="vertical">
		    <TextView android:text="@string/notify_prefs_title"
		              android:layout_width="wrap_content"
		              android:layout_height="wrap_content"
		              android:textColor="@android:color/white"
		              android:textSize="20sp"/>
		    <CheckBox android:id="@+id/prefs_checkbox_success"
		              android:text="@string/notify_prefs_success"
		              android:layout_width="wrap_content"
		              android:layout_height="wrap_content"
		              android:checked="false"
		              android:textSize="20sp"/>
		    <CheckBox android:id="@+id/prefs_checkbox_error"
		              android:text="@string/notify_prefs_error"
		              android:layout_width="wrap_content"
		              android:layout_height="wrap_content"
		              android:checked="false"
		              android:textSize="20sp"/>
		    <CheckBox android:id="@+id/prefs_checkbox_already_logged"
		              android:text="@string/notify_prefs_already_logged"
		              android:layout_width="wrap_content"
		              android:layout_height="wrap_content"
		              android:checked="false"
		              android:textSize="20sp"/>
		
		    
		
		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/usernamelabel"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		    
		    <EditText
		        android:id="@+id/prefs_username"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:inputType="text"
		        android:text="@string/defaultusername" >
		
		        <requestFocus />
		    </EditText>
		    
		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/passwdlabel"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		    
		    <EditText
		        android:id="@+id/prefs_passwd"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:inputType="textPassword"
		        android:text="@string/defaultpasswd" >
		
		        <requestFocus />
		    </EditText>
		    
		    
		    
		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/urllabel"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <EditText
		        android:id="@+id/prefs_url"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:inputType="textUri"
		        android:text="@string/defaulturl" >
		
		        <requestFocus />
		    </EditText>
		    
		    <Button
		        android:id="@+id/prefs_save"
		        android:layout_width="100dp"
		        android:layout_height="wrap_content"
		        android:text="@string/save"
		        android:textSize="20sp" />
		    </LinearLayout>
	</ScrollView>
</LinearLayout>
