<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:paddingLeft="0dp"
              android:paddingRight="0dp"
              android:orientation="vertical">
              
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		              android:orientation="vertical"
		              android:layout_width="fill_parent"
		              android:layout_height="wrap_content">
		              
		    
		    
		    
		    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		        android:orientation="horizontal"
		        android:gravity="center"
		        android:layout_width="fill_parent"
		        android:layout_height="50sp">
		    <ImageView android:src="@drawable/icon" android:contentDescription="Icon" android:layout_width="50sp" android:layout_height="50sp"/>
		    <TextView android:text="@string/title" android:gravity="center" android:id="@+id/textView1" android:textSize="20dp" android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
		    </LinearLayout>
		    
		    <TextView android:text="@string/desc" android:gravity="center" android:id="@+id/textView3"  android:textSize="15dp" android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>

		    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		        android:orientation="horizontal"
		        android:gravity="center"
		        android:layout_width="fill_parent"
		        android:layout_height="50sp">
		        
		       <ToggleButton
		        android:id="@+id/active"
		        android:layout_width="wrap_content"
		        android:layout_height="fill_parent" />

		    <Button
		        android:id="@+id/runManual"
		        android:layout_width="wrap_content"
		        android:layout_height="fill_parent"
		        android:text="Run Login Manually" /> 
		        
		        
		        
		    </LinearLayout>
		    
		    <TextView android:text="@string/history" android:id="@+id/textView2" android:textStyle="bold"   android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		    <TableLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/histTable" android:textSize="10dp">
		    </TableLayout>
		</LinearLayout>
		
	</ScrollView>
</LinearLayout>		
		
		
